[package]
name = "ardl_socket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
ardl = { git = "https://github.com/Banyc/ardl" }
bmrng = "0.5.2"
byteorder = "1.4.3"
rand = "0.8.5"
